@@ -19,12 +19,20 @@ package org.apache.solr.search;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Date;
+import java.io.IOException;
 
 import org.apache.lucene.queryParser.ParseException;
 import org.apache.lucene.search.Query;
+import org.apache.lucene.index.IndexReader;
 import org.apache.solr.common.util.NamedList;
+import org.apache.solr.common.SolrException;
 import org.apache.solr.search.function.*;
 import org.apache.solr.util.plugin.NamedListInitializedPlugin;
+import org.apache.solr.schema.TrieDateField;
+import org.apache.solr.schema.DateField;
+import org.apache.solr.schema.SchemaField;
+import org.apache.solr.schema.LegacyDateField;
 
 /**
  * A factory that parses user queries to generate ValueSource instances.
@@ -232,6 +240,24 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin
       }
       
     });
+    standardValueSourceParsers.put("sub", new ValueSourceParser() {
+      public ValueSource parse(FunctionQParser fp) throws ParseException {
+        ValueSource a = fp.parseValueSource();
+        ValueSource b = fp.parseValueSource();
+        return new DualFloatFunction(a,b) {
+          protected String name() {
+            return "sub";
+          }
+          protected float func(int doc, DocValues aVals, DocValues bVals) {
+            return aVals.floatVal(doc) - bVals.floatVal(doc);
+          }
+        };
+      }
+
+      public void init(NamedList args) {
+      }
+
+    });
     standardValueSourceParsers.put("query", new ValueSourceParser() {
       // boost(query($q),rating)
       public ValueSource parse(FunctionQParser fp) throws ParseException {
@@ -259,6 +285,149 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin
       }
       
     });
+    standardValueSourceParsers.put("ms", new DateValueSourceParser());
   }
 
+}
+
+
+
+
+class DateValueSourceParser extends ValueSourceParser {
+  DateField df = new TrieDateField();
+  public void init(NamedList args) {}
+
+  public Date getDate(FunctionQParser fp, String arg) {
+    if (arg==null) return null;
+    if (arg.startsWith("NOW") || (arg.length()>0 && Character.isDigit(arg.charAt(0)))) {
+      return df.parseMathLenient(null, arg, fp.req);
+    }
+    return null;
+  }
+
+  public ValueSource getValueSource(FunctionQParser fp, String arg) {
+    if (arg==null) return null;
+    SchemaField f = fp.req.getSchema().getField(arg);
+    if (f.getType().getClass() == DateField.class || f.getType().getClass() == LegacyDateField.class) {
+      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Can't use ms() function on non-numeric legacy date field " + arg);
+    }
+    return f.getType().getValueSource(f, fp);
+  }
+
+  public ValueSource parse(FunctionQParser fp) throws ParseException {
+    String first = fp.parseArg();
+    String second = fp.parseArg();
+    if (first==null) first="NOW";
+
+    Date d1=getDate(fp,first);
+    ValueSource v1 = d1==null ? getValueSource(fp, first) : null;
+
+    Date d2=getDate(fp,second);
+    ValueSource v2 = d2==null ? getValueSource(fp, second) : null;
+
+    // d     constant
+    // v     field
+    // dd    constant
+    // dv    subtract field from constant
+    // vd    subtract constant from field
+    // vv    subtract fields
+
+    final long ms1 = (d1 == null) ? 0 : d1.getTime();
+    final long ms2 = (d2 == null) ? 0 : d2.getTime(); 
+
+    // "d,dd" handle both constant cases
+
+    if (d1 != null && v2==null) {
+      return new LongConstValueSource(ms1-ms2);
+    }
+
+    // "v" just the date field
+    if (v1 != null && v2==null && d2==null) {
+      return v1;
+    }
+
+
+    // "dv"
+    if (d1!=null && v2!=null)
+      return new DualFloatFunction(new LongConstValueSource(ms1), v2) {
+        protected String name() {
+          return "ms";
+        }
+        protected float func(int doc, DocValues aVals, DocValues bVals) {
+          return ms1 - bVals.longVal(doc);
+        }
+      };
+
+    // "vd"
+    if (v1!=null && d2!=null)
+      return new DualFloatFunction(v1, new LongConstValueSource(ms2)) {
+        protected String name() {
+          return "ms";
+        }
+        protected float func(int doc, DocValues aVals, DocValues bVals) {
+          return aVals.longVal(doc) - ms2;
+        }
+      };
+
+    // "vv"
+    if (v1!=null && v2!=null)
+      return new DualFloatFunction(v1,v2) {
+        protected String name() {
+          return "ms";
+        }
+        protected float func(int doc, DocValues aVals, DocValues bVals) {
+          return aVals.longVal(doc) - bVals.longVal(doc);
+        }
+      };
+
+      return null; // shouldn't happen
+  }
+
+}
+
+
+// Private for now - we need to revisit how to handle typing in function queries
+class LongConstValueSource extends ValueSource {
+  final long constant;
+
+  public LongConstValueSource(long constant) {
+    this.constant = constant;
+  }
+
+  public String description() {
+    return "const(" + constant + ")";
+  }
+
+  public DocValues getValues(IndexReader reader) throws IOException {
+    return new DocValues() {
+      public float floatVal(int doc) {
+        return constant;
+      }
+      public int intVal(int doc) {
+        return (int)constant;
+      }
+      public long longVal(int doc) {
+        return constant;
+      }
+      public double doubleVal(int doc) {
+        return constant;
+      }
+      public String strVal(int doc) {
+        return Long.toString(constant);
+      }
+      public String toString(int doc) {
+        return description();
+      }
+    };
+  }
+
+  public int hashCode() {
+    return (int)constant + (int)(constant>>>32);
+  }
+
+  public boolean equals(Object o) {
+    if (LongConstValueSource.class != o.getClass()) return false;
+    LongConstValueSource other = (LongConstValueSource)o;
+    return this.constant == other.constant;
+  }
 }
